// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TraceTree assembles tree from trace 1`] = `
"
trace root
  transaction - transaction.op
    transaction - transaction.op
"
`;

exports[`TraceTree inserts orphan error 1`] = `
"
trace root
  transaction - transaction.op
    transaction - transaction.op
  error
"
`;

exports[`TraceTree missing instrumentation adds missing instrumentation between children spans 1`] = `
"
trace root
  transaction - transaction.op
    db - redis
      missing_instrumentation
      http - request
"
`;

exports[`TraceTree missing instrumentation adds missing instrumentation between sibling spans 1`] = `
"
trace root
  transaction - transaction.op
    db - redis
    missing_instrumentation
    db - redis
"
`;

exports[`TraceTree missing instrumentation does not add missing instrumentation for browser SDKs 1`] = `
"
trace root
  transaction - transaction.op
    db - redis
    db - redis
"
`;

exports[`TraceTree missing instrumentation idempotent - children 1`] = `
"
trace root
  transaction - transaction.op
    db - redis
      missing_instrumentation
      http - request
"
`;

exports[`TraceTree missing instrumentation idempotent - siblings 1`] = `
"
trace root
  transaction - transaction.op
    db - redis
    missing_instrumentation
    db - redis
"
`;

exports[`TraceTree parent autogrouping assigns children to tail node 1`] = `
"
trace root
  transaction - transaction.op
    parent autogroup (db: 3)
      http.request - browser
"
`;

exports[`TraceTree parent autogrouping autogrouped chain points to tail 1`] = `
"
trace root
  transaction - transaction.op
    parent autogroup (db: 3)
      http - request
"
`;

exports[`TraceTree parent autogrouping autogroups siblings when they are children of a parent autogroup chain 1`] = `
"
trace root
  transaction - transaction.op
    parent autogroup (db: 3)
      missing_instrumentation
      sibling autogroup (db: 5)
"
`;

exports[`TraceTree parent autogrouping can expand and collapse 1`] = `
"
trace root
  transaction - transaction.op
    parent autogroup (db: 3)
      db - redis
        db - redis
          db - redis
            http.request - browser
"
`;

exports[`TraceTree parent autogrouping collapsing parent autogroup removes its children 1`] = `
"
trace root
  transaction - transaction.op
    parent autogroup (db: 3)
      db - redis
        db - redis
          db - redis
"
`;

exports[`TraceTree parent autogrouping collapsing parent autogroup removes its children 2`] = `
"
trace root
  transaction - transaction.op
    parent autogroup (db: 3)
"
`;

exports[`TraceTree parent autogrouping expanding parent autogroup renders head to tail chain 1`] = `
"
trace root
  transaction - transaction.op
    parent autogroup (db: 3)
      db - redis
        db - redis
          db - redis
"
`;

exports[`TraceTree parent autogrouping groups parent chain with same op 1`] = `
"
trace root
  transaction - transaction.op
    parent autogroup (db: 3)
"
`;

exports[`TraceTree server side rendering reparents pageload transaction as parent of server handler 1`] = `
"
trace root
  transaction - pageload
    transaction - http.server
"
`;

exports[`TraceTree server side rendering reparents server handler under browser request span 1`] = `
"
trace root
  transaction - pageload
    tls.connect - span.description
    browser.request - browser
      transaction - http.server
"
`;

exports[`TraceTree sibling autogrouping autogroups multiple consecutive groups 1`] = `
"
trace root
  transaction - transaction.op
    sibling autogroup (db: 5)
    sibling autogroup (mysql: 5)
"
`;

exports[`TraceTree sibling autogrouping collapsing sibling autogroup removes its children 1`] = `
"
trace root
  transaction - transaction.op
    sibling autogroup (db: 5)
      db - redis
      db - redis
      db - redis
      db - redis
      db - redis
"
`;

exports[`TraceTree sibling autogrouping collapsing sibling autogroup removes its children 2`] = `
"
trace root
  transaction - transaction.op
    sibling autogroup (db: 5)
"
`;

exports[`TraceTree sibling autogrouping does not autogroup if count is less 5 1`] = `
"
trace root
  transaction - transaction.op
    db - redis
    db - redis
    db - redis
    db - redis
"
`;

exports[`TraceTree sibling autogrouping expanding sibling autogroup renders its children 1`] = `
"
trace root
  transaction - transaction.op
    sibling autogroup (db: 5)
      db - redis
      db - redis
      db - redis
      db - redis
      db - redis
"
`;

exports[`TraceTree sibling autogrouping groups spans with the same op and description 1`] = `
"
trace root
  transaction - transaction.op
    sibling autogroup (db: 5)
"
`;

exports[`TraceTree sorts by start_timestamp 1`] = `
"
trace root
  first - transaction.op
  last - transaction.op
"
`;
